cbgl now rg not ok

--- a/Application/Home/View/AllInOne/east.html
+++ b/Application/Home/View/AllInOne/east.html
@@ -8,7 +8,7 @@
                 //alert(xhr.responseText);
                 //var result = eval('(' + xhr.responseText + ')');
                 //console.log(result);
-                if(true == result.state){
+                if(true == result.state && result.count > 0){
                     //alert(result.msg);
 /*                    new PNotify({
                         title: 'Oh No!',
