rg need sub table

--- a/Application/Home/View/AllInOne/allmodules.html
+++ b/Application/Home/View/AllInOne/allmodules.html
@@ -40,7 +40,16 @@
 <br>
 <div id="AllInOneDetail">
     <include file="AllInOne/module_xmjbxx" />
+    <include file="AllInOne/module_xmscfx" />
+    <include file="AllInOne/module_khbyd" />
+    <include file="AllInOne/module_xmrlzygl" />
+    <include file="AllInOne/module_xmsjgl" />
     <include file="AllInOne/module_xmcbgl" />
+    <include file="AllInOne/module_xmzjlgl" />
+    <include file="AllInOne/module_gysgl" />
+    <include file="AllInOne/module_ygjxgl" />
+    <include file="AllInOne/module_gczcgl" />
+    <include file="AllInOne/module_dxmgl" />
 </div>
 
 
